Fixed slider overlapping menu

--- a/WCCCSite/src/components/header/header.scss
+++ b/WCCCSite/src/components/header/header.scss
@@ -1,9 +1,18 @@
 
 header{
+    height: 80vh;
     width: 100%;
     text-align: right;
+    display: flex;
+    flex-direction: column;
     
     .nav-menu{
         margin-right: 2em;
+        z-index: 1000;
+        align-self: flex-end;
+    }
+    .image-slider{
+        z-index: 0;
+        flex-grow: 1;
     }
 }
