--- a/WCCCSite/src/components/nav-menu/nav-menu.scss
+++ b/WCCCSite/src/components/nav-menu/nav-menu.scss
@@ -52,6 +52,7 @@
                 li{
                     display: none;
                     text-align: left;
+                    z-index: 1000;
                 }
             }
              
